# discontinuos_timeview

./: .gitignore  README.md  discontinuous_function_inferred_data.csv  pyproject.toml
src/: train_jump_detector.py
src/data/: sine.json
src/dataloader/: discontinuity.py
src/dataset/: create_dataset.py  dataset_creator.py  try.py
src/models/: jump_detector.py
