[tool.poetry]
name = "improve-timeview"
version = "0.1.0"
description = ""
authors = ["FilippoFicarra <82835577+FilippoFicarra@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
scipy = "^1.14.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
